--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,13 @@ h6 {
   font-size: clamp(24px, 3.12vw, 60px);
 }
 
+.section-description {
+  font-size: 20px;
+  line-height: 1.65;
+  text-transform: uppercase;
+  color: var(--color-light);
+  text-align: center;
+}
 .backdrop-title {
   position: relative;
   z-index: 2;
@@ -496,14 +503,6 @@ h6 {
   margin-bottom: 52px;
 }
 
-.join-us-form-subtitle {
-  font-size: 20px;
-  line-height: 1.65;
-  text-transform: uppercase;
-  color: var(--color-light);
-  text-align: center;
-}
-
 .join-us-form-body {
   display: flex;
   justify-content: center;
@@ -542,6 +541,31 @@ h6 {
 
 .location-description:not(:last-child) {
   margin-bottom: 37px;
+}
+
+.family {
+  background-color: var(--color-dark-alternate);
+}
+
+.family-header {
+  padding-top: 132px;
+  padding-bottom: 62px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 7px;
+  align-items: center;
+  text-align: center;
+}
+.family-body {
+  display: flex;
+  justify-content: center;
+  column-gap: 26px;
+  scroll-snap-type: x mandatory;
+  overflow-x: scroll;
+}
+
+.family-image {
+  scroll-snap-align: start;
 }
 
 @media (max-width: 1919px) {
@@ -600,6 +624,10 @@ h6 {
   .location {
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .family-image {
+    height: 360px;
   }
 }
 
@@ -670,7 +698,7 @@ h6 {
     margin-bottom: 40px;
   }
 
-  .join-us-form-subtitle {
+  .section-description {
     font-size: 16px;
   }
 
@@ -686,5 +714,18 @@ h6 {
 
   .location-description:not(:last-child) {
     margin-bottom: 20px;
+  }
+
+  .family-image {
+    height: 180px;
+  }
+
+  .family-header {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .family-body {
+    column-gap: 12px;
   }
 }
